# css-tas

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
tas/: cheat.cpp  cheat.h  imconfig.hpp  imgui_impl_win32.cpp  main.cpp
tas/core/debug/: debug.cpp  debug.h
tas/core/input/: input.cpp  input.h
tas/core/interfaces/: interfaces.cpp  interfaces.h
tas/core/menu/: menu.cpp  menu.h
tas/core/netvars/: netvars.cpp  netvars.h
tas/core/offsets/: offsets.cpp  offsets.h
tas/core/player_manager/: player_manager.cpp  player_manager.h
tas/core/prediction/: prediction.cpp  prediction.h
tas/core/settings/: settings.h
tas/features/: compression_handler.cpp  compression_handler.h  tas.cpp  tas.h
tas/features/movement/: movement.cpp  movement.h
tas/features/tas/: input.h  segment.h
tas/features/visual/: esp.cpp  esp.h
tas/hooks/: hook.h  hooks.cpp  hooks.h
tas/valve/: app_system.h  base_client.h  bf_write.h  bsp.cpp  bsp.h  client_class.h  client_class_id.h  client_frame_stage.h  color.h  console.h  coord_size.h  cvar.h  datamap.h  engine_client.h  entity_list.h  global_vars.h  input.h  interface_reg.h  model_info.h  prediction.h  prediction_copy.h  recv.h  render_view.h  studio_header.h  usercmd.h  view_setup.h
tas/valve/entities/: base_entity.cpp  base_entity.h  base_handle.h  base_networkable.h  client_entity.h  client_networkable.h  client_renderable.h  client_thinkable.h  client_unknown.h  handle_entity.h  player.cpp  player.h  weapon.h
tas/valve/tracing/: engine_trace.h  mask_defines.h  trace.h  trace_filter.cpp  trace_filter.h
